updated gemini clone

--- a/Gemini Clone/index.html
+++ b/Gemini Clone/index.html
@@ -50,42 +50,8 @@
     </header>
     <!-- ------------------------------------------header End--------------------------------------- -->
     <!-- ------------------------------------------ChatList start--------------------------------------- -->
-    <div class="chat-list">
-        <!-- <div class="message outgoing">
-            <div class="message-content">
-                <img src="https://cdn-icons-png.flaticon.com/128/5231/5231020.png" alt="user image" class="avatar" />
-                <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-                    ipsam?
-                </p>
-            </div>
-        </div>
-        <div class="message incoming">
-            <div class="message-content">
-                <img src="https://cdn-icons-png.flaticon.com/128/6661/6661011.png" alt="Gemini" class="avatar" />
-                <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-                    ipsam?
-                </p>
-            </div>
-            <span class="icon material-symbols-rounded"> content_copy </span>
-        </div>
-        <div class="message incoming loading">
-        <div class="message-content">
-            <img src="https://cdn-icons-png.flaticon.com/128/6661/6661011.png" alt="Gemini" class="avatar" />
-            <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-                ipsam?
-            </p>
-            <div class="loading-indicator">
-                <div class="loading-bar"></div>
-                <div class="loading-bar"></div>
-                <div class="loading-bar"></div>
-            </div>
-        </div>
-
-        <span class="icon material-symbols-rounded"> content_copy </span> -->
-    </div>
+    <div class="chat-list".>
+    
     </div>
     <!-- ------------------------------------------ChatList End--------------------------------------- -->
     <!-------------------------------------------------------------- typing area start------------------- -->
@@ -96,8 +62,8 @@
                 <buton class="icon material-symbols-rounded" > send </buton>
             </div>
             <div class="action-buttons">
-                <span class="icon material-symbols-rounded"> light_mode </span>
-                <span class="icon material-symbols-rounded"> delete </span>
+                <span id="toggle-theme-button" class="icon material-symbols-rounded"> light_mode </span>
+                <span id="delete-chat-button" class="icon material-symbols-rounded"> delete </span>
             </div>
         </form>
         <p class="disclaimer-text">
